# uuk

./: .gitignore  CMakeLists.txt  REAMDE.md  uuk.cmake
kernel/: CMakeLists.txt  linker.ld
kernel/src/: main.c
kernel/src/arch/: portio.c  portio.h
kernel/src/boot/: uuk.h
kernel/src/dev/: serial.c  serial.h
kernel/src/lib/: nanoprintf.h  string.c  string.h
kernel/src/sys/: spinlock.h
kernel/src/util/: kprintf.c  kprintf.h
